# nexo

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  analysis_options.yaml  pubspec.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bootstrap-platforms.yml  ci.yml  complete-task-module.yml
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/jvniorq/nexo/: MainActivity.kt
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: test_api.py
docs/: PRODUCT_VISION.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: design_tokens.dart  nexo_theme.dart
lib/data/: organization_repository.dart
lib/domain/: models.dart
lib/widgets/: nexo_section_label.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
